fixing box-sizing on css required for smarter padding-margin stuff. fixes a lot of css errors on smaller displays

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,13 @@
   background-image: -webkit-linear-gradient(315deg, #2e2d45, #1c2127);
   background-image: linear-gradient(135deg, #2e2d45, #1c2127);
   color: var(--primaryTextColor);
+  box-sizing: border-box;
+  & * {
+    box-sizing: inherit;
+    &:matches(::after, ::before) {
+      box-sizing: inherit;
+    } 
+  }
 }
 
 :global(#react) {
